--- a/headphones/2-styles.css
+++ b/headphones/2-styles.css
@@ -9,8 +9,17 @@ body{
     background-size: cover; /* Makes the image cover the entire element */
     background-repeat: no-repeat; /* Prevents the image from repeating */
     background-position: center; /* Centers the image */
+    animation: slideIn 3s ease-out; /* Apply the animation */
         } 
-
+ 
+        @keyframes fadeIn {
+          0% {
+              opacity: 0;
+          }
+          100% {
+              opacity: 1;
+          }
+      }
 .container2 {
     text-align: center;
     color: beige;
@@ -45,7 +54,35 @@ header{
     margin-top: 8%;
     text-align: center;
     margin-bottom: 5%;
+    animation: bounce 2s infinite;
   }
+
+  button {
+    display: block; /* Treat button as a block-level element */
+            margin: 0 auto; /* Center horizontally */
+            margin-top: 15px;
+            background-color: #FF6565;
+            border: none;
+            color: beige;
+            font-size: 20px;
+            border-radius: 20px;
+            margin-top: 5%;
+            margin-bottom: 5%;
+
+  }
+
+  @keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+        transform: translateY(0);
+    }
+    40% {
+        transform: translateY(-30px);
+    }
+    60% {
+        transform: translateY(-15px);
+    }
+}
+
 
   .icons{
     display: flex;
@@ -53,6 +90,7 @@ header{
     margin: 10;
     justify-content: center;
     gap: 5%;
+    animation: bounce 2s infinite;
   }
   
   h3 {
@@ -68,6 +106,7 @@ header{
     padding: 20px;
     justify-content: center;
     color: beige;
+    animation: fadeIn 3s ease-in;
 }
 
 .results{
