--- a/headphones/4-styles.css
+++ b/headphones/4-styles.css
@@ -9,6 +9,16 @@ body{
     background-size: cover; /* Makes the image cover the entire element */
     background-repeat: no-repeat; /* Prevents the image from repeating */
     background-position: center; /* Centers the image */
+    animation: fadeIn 3s ease-in;
+}
+
+@keyframes fadeIn {
+  0% {
+      opacity: 0;
+  }
+  100% {
+      opacity: 1;
+  }
 }
   
 .container2 {
@@ -45,7 +55,34 @@ header{
     margin-top: 8%;
     text-align: center;
     margin-bottom: 5%;
+    animation: bounce 2s infinite;
   }
+
+  button {
+    display: block; /* Treat button as a block-level element */
+            margin: 0 auto; /* Center horizontally */
+            margin-top: 15px;
+            background-color: #FF6565;
+            border: none;
+            color: beige;
+            font-size: 20px;
+            border-radius: 20px;
+            margin-top: 5%;
+            margin-bottom: 5%;
+
+  }
+
+  @keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+        transform: translateY(0);
+    }
+    40% {
+        transform: translateY(-30px);
+    }
+    60% {
+        transform: translateY(-15px);
+    }
+}
 
   .icons{
     display: flex;
@@ -53,6 +90,7 @@ header{
     margin: 10;
     justify-content: center;
     gap: 5%;
+    animation: bounce 2s infinite;
   }
   
   h3 {
@@ -74,14 +112,14 @@ header{
   }
   
   @keyframes fadeIn {
-                opacity: 0;
-          transform: translateY(20px);
-      }
-      to {
-          opacity: 1;
-          transform: translateY(0);
-      }
-  
+    opacity: 0;
+transform: translateY(20px);
+}
+to {
+opacity: 1;
+transform: translateY(0);
+}
+
   
 
 .results{
@@ -144,6 +182,7 @@ form {
   max-width: 500px; /* Optional: Limit the width */
   padding: 0.5rem;
   font-size: 1rem;
+  animation: slideIn 2s ease-out;
 }
 
 .forms button {
@@ -159,13 +198,38 @@ form {
   background-color: hsl(0, 100%, 35%);
 }
 
- .footer{
-    display: flex;
-    padding: 20px;
-       margin-top: 3%;
-          margin: 0%;
-    background-color: rgba(7, 22, 41, 1);
- }
+@keyframes slideIn {
+  0% {
+      transform: translateY(-100%);
+      opacity: 0;
+  }
+  50% {
+      transform: translateY(10%);
+      opacity: 0.5;
+  }
+  100% {
+      transform: translateY(0);
+      opacity: 1;
+  }
+}
+
+.footer{
+  display: flex;
+  padding: 20px;
+     margin-top: 3%;
+        margin: 0%;
+  background-color: rgba(7, 22, 41, 1);
+  animation: rotate 2s linear;
+}
+
+@keyframes rotate {
+  0% {
+      transform: rotate(0deg);
+  }
+  100% {
+      transform: rotate(360deg);
+  }
+}
 
  .footerli{
     margin-left: 1000px;
